--- a/index.html
+++ b/index.html
@@ -119,15 +119,16 @@
 				<div class="row">
 					<div class="col-md-5">
 						<div class="hero-img">
-							<img src="img/kunstbryst.jpg" alt="hero">
+							<img src="img/logo.png" alt="hero">
 						</div>
 					</div>
 					<div class="col-md-7">
 						<div class="hero-content">
 							<h4 class="head-left">Om Adamsakt</h4>
 							<p>
-								Adamsakt er et helt nyoppstartet selskap i Bergen som tilbyr aktmodellering i festlige omgivelser.
-
+								Adamsakt er et nyoppstartet selskap i Bergen som tilbyr aktmodellering i festlige omgivelser.
+								Skulle det være utdrikningslag, en jentekveld, eller bursdag - Adamsakt stiller opp med modell i
+								adamsdrakt. Les mer om våre tjenester under. Ta kontakt for mer informasjon og timebestilling!
 							</p>
 							<div class="info">
 								<div class="row">
@@ -448,13 +449,13 @@
 						<div class="col-md-4 items graphic">
 							<div class="item-img">
 							
-							<img src="img/overkropp.jpg" alt="image">
+							<img src="img/kunstbryst.jpg" alt="image">
 							<div class="item-img-overlay">
 								<div class="overlay-info v-middle text-center">
 									<h6 class="sm-titl">Generelt</h6>
 									<div class="icons">
 										<span class="icon link">
-											<a href="img/overkropp.jpg">
+											<a href="img/kunstbryst.jpg">
 												<span class="icon-magnifying-glass"></span>
 											</a>
 										</span>
@@ -496,11 +497,11 @@
 		<section id="contact" class="contact section-padding" data-scroll-index="7">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-7">
+					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 
-						<h4 class="head-left">Get In Touch</h4>
+						<h4 class="section-head">Ta kontakt for å avtale tid!</h4>
 
-						<form class="form" id="contact-form" method="post" action="contact.html">
+						<!--<form class="form" id="contact-form" method="post" action="contact.html">
 	                        <div class="messages"></div>
 
 	                        <div class="controls">
@@ -539,27 +540,27 @@
 	                                    <input type="submit" value="Send message">
 	                                </div>
 	                            </div>
-	                        </div>
+	                        </div>-->
 	                    </form>
 					</div>
 
-					<div class="col-md-offset-1 col-md-4">
+					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<div class="info">
-							<div class="item">
+							<div class="item col-md-4">
 								<span class="icon ion-android-call"></span>
-								<h6>Phone :<br> <span>+2 ( 100 ) 755 238</span></h6>
+								<h6>Phone :<br> <span>+47 900 930 64</span></h6>
 							</div>
-							<div class="item">
+							<div class="item col-md-4">
 								<span class="icon ion-ios-location"></span>
-								<h6>Address :<br> <span>3481 Melrose Place, <br
-								>Los Angeles</span></h6>
+								<h6>Address :<br> <span>Fabrikkgaten 28, <br
+								>Bergen</span></h6>
 							</div>
-							<div class="item">
+							<div class="item col-md-4">
 								<span class="icon ion-ios-email"></span>
-								<h6>Email :<br> <span>alexmartin@gmail.com</span></h6>
+								<h6>Email :<br> <span>adam@adamsakt.no</span></h6>
 							</div>
 							<!-- social Icon -->
-							<div class="social-icon">
+							<div class="social-icon col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10" >
 								<a href="#0">
 									<span><i class="fa fa-facebook" aria-hidden="true"></i></span>
 								</a>
