Missing services, else 100%

--- a/index.html
+++ b/index.html
@@ -147,7 +147,21 @@
 									<div class="clear-fix"></div>
 								</div>
 							</div>
-
+							<!-- social Icon -->
+							<div class="social-icon col-md-4 col-sm-6" >
+								<a href="#0">
+									<span><i class="fa fa-facebook" aria-hidden="true"></i></span>
+								</a><br>
+								<a href="#0">
+									<span><i class="fa fa-twitter" aria-hidden="true"></i></span>
+								</a><br>
+								<a href="#0">
+									<span><i class="fa fa-linkedin" aria-hidden="true"></i></span>
+								</a><br>
+								<a href="#0">
+									<span><i class="fa fa-instagram" aria-hidden="true"></i></span>
+								</a>
+							</div>
 						</div>
 					</div>
 					<div class="clear-fix"></div>
@@ -295,23 +309,23 @@
 
 								<!-- client item -->
 								<div class="client-item">
-									<h5>John Doe</h5>
-									<p><i class="fa fa-quote-left" aria-hidden="true"></i> Phasellus luctus commodo ullamcorper a posuere rhoncus commodo elit. Aenean congue, risus utaliquam dapibus. Thanks!. <i class="fa fa-quote-right" aria-hidden="true"></i></p>
-									<h6>Envato</h6>
+									<h5>Adamsakt</h5>
+									<p><i class="fa fa-quote-left" aria-hidden="true"></i> Her vil det bli lagt inn tilbakemeldinger fra kunder etterhvert =). <i class="fa fa-quote-right" aria-hidden="true"></i></p>
+									<h6>Navn på Kunde</h6>
 								</div>
 
 								<!-- client item -->
 								<div class="client-item">
-									<h5>John Doe</h5>
-									<p><i class="fa fa-quote-left" aria-hidden="true"></i> Phasellus luctus commodo ullamcorper a posuere rhoncus commodo elit. Aenean congue, risus utaliquam dapibus. Thanks!. <i class="fa fa-quote-right" aria-hidden="true"></i></p>
-									<h6>Envato</h6>
+									<h5>Adamsakt</h5>
+									<p><i class="fa fa-quote-left" aria-hidden="true"></i> Her vil det bli lagt inn tilbakemeldinger fra kunder etterhvert =). <i class="fa fa-quote-right" aria-hidden="true"></i></p>
+									<h6>Navn på Kunde</h6>
 								</div>
 
 								<!-- client item -->
 								<div class="client-item">
-									<h5>John Doe</h5>
-									<p><i class="fa fa-quote-left" aria-hidden="true"></i> Phasellus luctus commodo ullamcorper a posuere rhoncus commodo elit. Aenean congue, risus utaliquam dapibus. Thanks!. <i class="fa fa-quote-right" aria-hidden="true"></i></p>
-									<h6>Envato</h6>
+									<h5>Adamsakt</h5>
+									<p><i class="fa fa-quote-left" aria-hidden="true"></i> Her vil det bli lagt inn tilbakemeldinger fra kunder etterhvert =). <i class="fa fa-quote-right" aria-hidden="true"></i></p>
+									<h6>Navn på Kunde</h6>
 								</div>
 
 							</div>
@@ -478,7 +492,7 @@
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<div class="content text-center">
 							<h2>Priser</h2>
-							<h6>3050,-</h6>
+							<h6>Fra 279,- pr. pers. (min 10 pers.)</h6>
 							<!--<a href="#">
 								<span class="botn">hmm<i class="icon ion-ios-paperplane"></i></span>
 							</a>-->
@@ -540,8 +554,8 @@
 	                                    <input type="submit" value="Send message">
 	                                </div>
 	                            </div>
-	                        </div>-->
-	                    </form>
+	                        </div>
+	                    </form>-->
 					</div>
 
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
@@ -571,9 +585,6 @@
 									<span><i class="fa fa-linkedin" aria-hidden="true"></i></span>
 								</a>
 								<a href="#0">
-									<span><i class="fa fa-pinterest-p" aria-hidden="true"></i></span>
-								</a>
-								<a href="#0">
 									<span><i class="fa fa-instagram" aria-hidden="true"></i></span>
 								</a>
 							</div>
@@ -581,7 +592,7 @@
 					</div>
 
 					<div class="col-sm-12 text-center">
-						<p class="copy">&copy; 2018 Adamsakt</p>
+						<p class="copy">2018 Adamsakt &copy; adam@adamsakt.no BERGEN</p>
 					</div>
 				</div>
 			</div>
