Working site. Ready for deployment

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 						</div>
 						<div class="col-md-6">
 							<div class="item">
-								<h6>Latter og Glede</h6>
+								<h6>Latter & Glede</h6>
 								<div class="skills-progress"><span data-value='100%'></span></div>
 							</div>
 
@@ -246,46 +246,53 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="item text-center">
-							<span class="icon ion-umbrella"></span>
-							<h6>Kort introduksjon</h6>
-							<p>Lorem ipsum dolor sit amet, conse ctetur adipi sicing elit, sed do eiusmod tempor incid idunt ut labore et.</p>
+							<span class="icon ion-ios-people"></span>
+							<h6>Utdriningslag / Annet</h6>
+							<p>Ved timebestilling er det ofte kun forloverne (arrangører) som vet at det er aktmodellering som er neste post i utdrikningslaget.
+                            Dette gjør at både bruden, og resten av deltakerene, får seg en skikkelig overraskelse når aktmodellen kommer frem.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="item text-center bord">
-							<span class="icon ion-bowtie"></span>
-							<h6>Development</h6>
-							<p>Lorem ipsum dolor sit amet, conse ctetur adipi sicing elit, sed do eiusmod tempor incid idunt ut labore et.</p>
+							<span class="icon ion-ios-bookmarks"></span>
+							<h6>Kort introduksjon</h6>
+							<p>Ved ankomst vil selskapet bli innledet av en dyktig instruktør med kunstfaglig kompetanse fra Universitetet i Bergen.
+                                I introduksjonen blir det gjennomgått en kort innføring i hovedprinsippene som inngår i tegneakten.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="item text-center">
-							<span class="icon ion-paintbucket"></span>
-							<h6>Graphic Design</h6>
-							<p>Lorem ipsum dolor sit amet, conse ctetur adipi sicing elit, sed do eiusmod tempor incid idunt ut labore et.</p>
+							<span class="icon ion-compose"></span>
+							<h6>Akttegning</h6>
+							<p>Etter en kort innføring vil Adam komme frem i adamsdrakten, og holde ulike positurer over forskjellige
+                                tidsperioder. Korte perioder for ulike øvelser, og en lengre periode for en mer detaljert tegning
+                            med veiledning av instruktør.</p>
 						</div>
 					</div>
 					<div class="clear-fix"></div>
 					<div class="border"></div>
 					<div class="col-md-4">
 						<div class="item text-center">
-							<span class="icon ion-bug"></span>
-							<h6>Clean Code</h6>
-							<p>Lorem ipsum dolor sit amet, conse ctetur adipi sicing elit, sed do eiusmod tempor incid idunt ut labore et.</p>
+							<span class="icon ion-ios-home"></span>
+							<h6>Oppmøte</h6>
+							<p>Adamsakt gjør hjemmebesøk eller kommer til egnet lokale. Adamsakt kan også fikse lokaler etter
+                            avtale. </p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="item text-center bord">
-							<span class="icon ion-monitor"></span>
-							<h6>Fully Responsive</h6>
-							<p>Lorem ipsum dolor sit amet, conse ctetur adipi sicing elit, sed do eiusmod tempor incid idunt ut labore et.</p>
+							<span class="icon ion-settings"></span>
+							<h6>Rekvisitter</h6>
+							<p>Adamsakt stiller med alt av utstyr for skissering av aktmodellen. Ønskes det at modellen ligger
+                            i en sofa, på et bord, eller står med spesifikke gjenstander må dette avtales på forhånd. Alkohol er selvfølgelig velkomment.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="item text-center">
-							<span class="icon ion-ios-color-wand"></span>
-							<h6>Problem Solving</h6>
-							<p>Lorem ipsum dolor sit amet, conse ctetur adipi sicing elit, sed do eiusmod tempor incid idunt ut labore et.</p>
+							<span class="icon ion-images"></span>
+							<h6>Konkurranser</h6>
+							<p>Som regel vil det bli kåret en vinner av den beste tegningen til slutt.
+                            Her kan premien, og pris på premien, avtales med oss på forhånd</p>
 						</div>
 					</div>
 					<div class="clear-fix"></div>
@@ -440,7 +447,7 @@
 						</div>
 
 						<!-- gallery item -->
-						<div class="col-md-4 items web graphic">
+						<div class="col-md-4 items graphic">
 							<div class="item-img">
 							
 							<img src="img/modell.jpg" alt="image">
@@ -493,10 +500,11 @@
 						<div class="content text-center">
 							<h2>Priser</h2>
 							<h6>Fra 279,- pr. pers. (min 10 pers.)</h6>
+                            <h6>Åpne prislisten under for mer informasjon!</h6>
 							<!--<a href="#">
 								<span class="botn">hmm<i class="icon ion-ios-paperplane"></i></span>
 							</a>-->
-							<a href="#">
+							<a href="Prisliste.pdf">
 								<span class="botn">Se prisliste<i class="icon ion-android-download"></i></span>
 							</a>
 						</div>
@@ -514,7 +522,7 @@
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 
 						<h4 class="section-head">Ta kontakt for å avtale tid!</h4>
-
+                        <h6>Husk å inkludere telefonnummer, antall deltakere, adresse og eventuelle andre ønsker</h6>
 						<!--<form class="form" id="contact-form" method="post" action="contact.html">
 	                        <div class="messages"></div>
 
