Working site. Ready for deployment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Adamsakt</title>
        	<meta name="description" content="Adamsakt er morsom aktmodellering i Bergen">
-		<meta name="keywords" content="portfolio, personal, corporate, business, parallax, creative, agency">
+		<meta name="keywords" content="aktmodellering, utdrikningslag, jentekveld, bursdag, vorspiel, aktmodell, akt modell, fest, stemning">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href="img/faviconbig.png" rel="icon" type="image/png">
