--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Adamsakt</title>
-       	<meta name="description" content="Adamsakt er morsom aktmodellering i Bergen">
+       	<meta name="description" content="Aktmodellering for selskap i Bergen">
 		<meta name="keywords" content="aktmodellering, utdrikningslag, jentekveld, bursdag, vorspiel, aktmodell, akt modell, fest, stemning">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -127,7 +127,7 @@
 							<h4 class="head-left">Om Adamsakt</h4>
 							<p>
 								Adamsakt er et nyoppstartet selskap i Bergen som tilbyr aktmodellering i festlige omgivelser.
-								Skulle det være utdrikningslag, en jentekveld, eller bursdag - Adamsakt stiller opp med modell i
+								Skulle det være utdrikningslag, en jentekveld, bursdag eller vorspiel - Adamsakt stiller opp med modell i
 								adamsdrakt. Les mer om våre tjenester under. Ta kontakt for mer informasjon og timebestilling!
 							</p>
 							<div class="info">
@@ -149,15 +149,15 @@
 							</div>
 							<!-- social Icon -->
 							<div class="social-icon col-md-4 col-sm-6" >
-								<a href="#0">
+								<a href="https://www.facebook.com/adamsakt.no/">
 									<span><i class="fa fa-facebook" aria-hidden="true"></i></span>
-								</a><br>
+								</a>&nbsp&nbsp
 								<a href="#0">
 									<span><i class="fa fa-twitter" aria-hidden="true"></i></span>
-								</a><br>
+								</a>&nbsp&nbsp
 								<a href="#0">
 									<span><i class="fa fa-linkedin" aria-hidden="true"></i></span>
-								</a><br>
+								</a>&nbsp&nbsp
 								<a href="#0">
 									<span><i class="fa fa-instagram" aria-hidden="true"></i></span>
 								</a>
@@ -410,13 +410,13 @@
 						<div class="col-md-4 items web">
 							<div class="item-img">
 							
-							<img src="img/Jentekveld.jpg" alt="image">
+							<img src="img/girlsnight.jpg" alt="image">
 							<div class="item-img-overlay">
 								<div class="overlay-info v-middle text-center">
 									<h6 class="sm-titl">Jentekvelder / Bursdager</h6>
 									<div class="icons">
 										<span class="icon link">
-											<a href="img/Jentekveld.jpg">
+											<a href="img/girlsnight.jpg">
 												<span class="icon-magnifying-glass"></span>
 											</a>
 										</span>
@@ -583,7 +583,7 @@
 							</div>
 							<!-- social Icon -->
 							<div class="social-icon col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10" >
-								<a href="#0">
+								<a href="https://www.facebook.com/adamsakt.no/">
 									<span><i class="fa fa-facebook" aria-hidden="true"></i></span>
 								</a>
 								<a href="#0">
