--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html class="no-js lt-ie9 lt-ie8" lang="">
 <html class="no-js lt-ie9" lang="">
 <html class="no-js" lang="en">
-
+TODO: legg inn farge på scrollmeny = hvit
 <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Adamsakt</title>
        	<meta name="description" content="Aktmodellering for selskap i Bergen">
-		<meta name="keywords" content="aktmodellering, utdrikningslag, jentekveld, bursdag, vorspiel, aktmodell, akt modell, fest, stemning">
+		<meta name="keywords" content="akt modell aktmodellering, utdrikningslag, jentekveld, bursdag, vorspiel, aktmodell, akt modell, fest, stemning">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href="img/faviconbig.png" rel="icon" type="image/png">
@@ -152,13 +152,13 @@
 								<a href="https://www.facebook.com/adamsakt.no/">
 									<span><i class="fa fa-facebook" aria-hidden="true"></i></span>
 								</a>&nbsp&nbsp
-								<a href="#0">
+								<a href="#">
 									<span><i class="fa fa-twitter" aria-hidden="true"></i></span>
 								</a>&nbsp&nbsp
-								<a href="#0">
+								<a href="https://www.linkedin.com/company/adamsakt/">
 									<span><i class="fa fa-linkedin" aria-hidden="true"></i></span>
 								</a>&nbsp&nbsp
-								<a href="#0">
+								<a href="#">
 									<span><i class="fa fa-instagram" aria-hidden="true"></i></span>
 								</a>
 							</div>
@@ -586,13 +586,13 @@
 								<a href="https://www.facebook.com/adamsakt.no/">
 									<span><i class="fa fa-facebook" aria-hidden="true"></i></span>
 								</a>
-								<a href="#0">
+								<a href="#">
 									<span><i class="fa fa-twitter" aria-hidden="true"></i></span>
 								</a>
-								<a href="#0">
+								<a href="https://www.linkedin.com/company/adamsakt/">
 									<span><i class="fa fa-linkedin" aria-hidden="true"></i></span>
 								</a>
-								<a href="#0">
+								<a href="#">
 									<span><i class="fa fa-instagram" aria-hidden="true"></i></span>
 								</a>
 							</div>
