navbar nav-icon color fix for nav-scroll

--- a/index.html
+++ b/index.html
@@ -125,8 +125,10 @@
 					<div class="col-md-7">
 						<div class="hero-content">
 							<h4 class="head-left">Om Adamsakt</h4>
-							<p>
-								Adamsakt er et nyoppstartet selskap i Bergen som tilbyr aktmodellering i festlige omgivelser.
+							<p>Tenk deg noe velsmakende i glasset, ost og kjeks på bordet, tegnesaker i fanget, og din helt nakne mannlige aktmodell.
+								Gjør deg klar for en kunstnerisk aften, Adam kommer på besøk.
+							</p><br>
+							<p>Adamsakt er et nyoppstartet selskap i Bergen som tilbyr aktmodellering i festlige omgivelser.
 								Skulle det være utdrikningslag, en jentekveld, bursdag eller vorspiel - Adamsakt stiller opp med modell i
 								adamsdrakt. Les mer om våre tjenester under. Ta kontakt for mer informasjon og timebestilling!
 							</p>
