Remove "progress-bar", fixed navbar for small an big devices, 767-991 somwhat ok but working.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Adamsakt</title>
        	<meta name="description" content="Aktmodellering for selskap i Bergen">
-		<meta name="keywords" content="akt modell aktmodellering, utdrikningslag, jentekveld, bursdag, vorspiel, aktmodell, akt modell, fest, stemning">
+		<meta name="keywords" content="akt modell, akt modell bergen, aktmodellering, utdrikningslag, jentekveld, bursdag, vorspiel, aktmodell, akt modell, fest, stemning">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href="img/faviconbig.png" rel="icon" type="image/png">
@@ -128,7 +128,7 @@
 							<p>Tenk deg noe velsmakende i glasset, ost og kjeks på bordet, tegnesaker i fanget, og din helt nakne mannlige aktmodell.
 								Gjør deg klar for en kunstnerisk aften, Adam kommer på besøk.
 							</p><br>
-							<p>Adamsakt er et nyoppstartet selskap i Bergen som tilbyr aktmodellering i festlige omgivelser.
+							<p>Adamsakt er et selskap i Bergen som tilbyr aktmodellering i festlige omgivelser.
 								Skulle det være utdrikningslag, en jentekveld, bursdag eller vorspiel - Adamsakt stiller opp med modell i
 								adamsdrakt. Les mer om våre tjenester under. Ta kontakt for mer informasjon og timebestilling!
 							</p>
@@ -160,7 +160,7 @@
 								<a href="https://www.linkedin.com/company/adamsakt/">
 									<span><i class="fa fa-linkedin" aria-hidden="true"></i></span>
 								</a>&nbsp&nbsp
-								<a href="#">
+								<a href="https://www.instagram.com/adamsakt.no/">
 									<span><i class="fa fa-instagram" aria-hidden="true"></i></span>
 								</a>
 							</div>
@@ -168,7 +168,7 @@
 					</div>
 					<div class="clear-fix"></div>
 
-					<div class="skills mt-100">
+					<!--<div class="skills mt-100">
 						<div class="col-md-6">
 							<div class="item">
 								<h6>Underholdene</h6>
@@ -192,7 +192,7 @@
 							</div>
 						</div>
 						<div class="clear-fix"></div>
-					</div>
+					</div>-->
 
 				</div>
 			</div>
@@ -207,29 +207,29 @@
 					<div class="col-md-3 col-sm-6">
 						<div class="item">
 							<span class="icon ion-edit"></span>
-							<h5 class="counter">1</h5>
-							<h6 class="sm-title">Instruktør</h6>
+							<h5 class="counter">2</h5>
+							<h6 class="sm-title">Instuktører</h6>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 						<div class="item">
 							<span class="icon ion-person"></span>
-							<h5 class="counter">1</h5>
-							<h6 class="sm-title">Adamsdrakt</h6>
+							<h5 class="counter">4</h5>
+							<h6 class="sm-title">modeller</h6>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 						<div class="item">
 							<span class="icon ion-ios-wineglass"></span>
-							<h5 class="counter">1</h5>
-							<h6 class="sm-title">Kveld</h6>
+							<h5 class="counter">15</h5>
+							<h6 class="sm-title">gruppekunder så langt</h6>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 						<div class="item">
 							<span class="icon ion-trophy"></span>
-							<h5 class="counter">1,000</h5>
-							<h6 class="sm-title">Gleder</h6>
+							<h5 class="counter">24</h5>
+							<h6 class="sm-title">av 24 fornøyde pilotkunder</h6>
 						</div>
 					</div>
 				</div>
@@ -576,8 +576,7 @@
 							</div>
 							<div class="item col-md-4">
 								<span class="icon ion-ios-location"></span>
-								<h6>Address :<br> <span>Fabrikkgaten 28, <br
-								>Bergen</span></h6>
+								<h6>Address :<br> <span>Bergen og omegn.</span></h6>
 							</div>
 							<div class="item col-md-4">
 								<span class="icon ion-ios-email"></span>
@@ -594,7 +593,7 @@
 								<a href="https://www.linkedin.com/company/adamsakt/">
 									<span><i class="fa fa-linkedin" aria-hidden="true"></i></span>
 								</a>
-								<a href="#">
+								<a href="https://www.instagram.com/adamsakt.no/">
 									<span><i class="fa fa-instagram" aria-hidden="true"></i></span>
 								</a>
 							</div>
