Update customer review added photos

--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
 
 		<!--====== Numbers ======-->
 		<div class="numbers section-padding text-center">
+			<div class="notat">
+				<p>April - september 2018:</p>
+			</div>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-3 col-sm-6">
@@ -214,22 +217,22 @@
 					<div class="col-md-3 col-sm-6">
 						<div class="item">
 							<span class="icon ion-person"></span>
-							<h5 class="counter">4</h5>
-							<h6 class="sm-title">modeller</h6>
+							<h5 class="counter">3</h5>
+							<h6 class="sm-title">Modeller</h6>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 						<div class="item">
 							<span class="icon ion-ios-wineglass"></span>
 							<h5 class="counter">15</h5>
-							<h6 class="sm-title">gruppekunder så langt</h6>
+							<h6 class="sm-title">Oppdrag 2018</h6>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 						<div class="item">
 							<span class="icon ion-trophy"></span>
-							<h5 class="counter">24</h5>
-							<h6 class="sm-title">av 24 fornøyde pilotkunder</h6>
+							<h5 class="counter">143</h5>
+							<h6 class="sm-title">Deltakere 2018</h6>
 						</div>
 					</div>
 				</div>
@@ -318,23 +321,32 @@
 
 								<!-- client item -->
 								<div class="client-item">
-									<h5>Adamsakt</h5>
-									<p><i class="fa fa-quote-left" aria-hidden="true"></i> Her vil det bli lagt inn tilbakemeldinger fra kunder etterhvert =). <i class="fa fa-quote-right" aria-hidden="true"></i></p>
-									<h6>Navn på Kunde</h6>
+									<h5>Anbefales</h5>
+									<p><i class="fa fa-quote-left" aria-hidden="true"></i> Etter en introduksjon av de forskjellige tegnesakene, med litt øvelse på kullstifter og sketching av en korkopptrekker som objekt, hentet instruktøren
+										Adam inn i stuen. Uttrykket til jentene var ubeskrivelig gøy å få med seg, og de ble ikke skuffet. Bruden, meg selv og resten av jentene koste oss kjempemye. Veldig fornøyd. <i class="fa fa-quote-right" aria-hidden="true"></i></p>
+									<h6>Maren, 30år</h6>
+								</div>
+
+								<!-- client item -->
+								<div class="client-item">
+									<h5>Akkurat som forventet</h5>
+									<p><i class="fa fa-quote-left" aria-hidden="true"></i> Kjempefornøyd 60åring i 60 årsdag. <i class="fa fa-quote-right" aria-hidden="true"></i></p>
+									<h6>Annonym</h6>
 								</div>
 
 								<!-- client item -->
 								<div class="client-item">
 									<h5>Adamsakt</h5>
-									<p><i class="fa fa-quote-left" aria-hidden="true"></i> Her vil det bli lagt inn tilbakemeldinger fra kunder etterhvert =). <i class="fa fa-quote-right" aria-hidden="true"></i></p>
-									<h6>Navn på Kunde</h6>
+									<p><i class="fa fa-quote-left" aria-hidden="true"></i> Adamsakt var veldig hjelpsomme i planlegging og utførelse av en tekgneakt i forbindelse med utdrikningslaget til broren min.
+										De svarer raskt og følger opp. Vi endte faktisk opp med å kjøre en vanlig økt med herremodell, men med en litt annonym stil. Skikkelig gøy!<i class="fa fa-quote-right" aria-hidden="true"></i></p>
+									<h6>Ragnhild, 29år</h6>
 								</div>
 
 								<!-- client item -->
 								<div class="client-item">
-									<h5>Adamsakt</h5>
-									<p><i class="fa fa-quote-left" aria-hidden="true"></i> Her vil det bli lagt inn tilbakemeldinger fra kunder etterhvert =). <i class="fa fa-quote-right" aria-hidden="true"></i></p>
-									<h6>Navn på Kunde</h6>
+									<h5>40års kalas</h5>
+									<p><i class="fa fa-quote-left" aria-hidden="true"></i> Jeg tenkte å tilby vennegjengen min noe ekstra i min 40 årsdag. Ingen ble skuffet der =D. Det er så gøy å overraske de.<i class="fa fa-quote-right" aria-hidden="true"></i></p>
+									<h6>Elisabeth, 40år</h6>
 								</div>
 
 							</div>
