fixed deployment to domeneshop - pw outdated

--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 		        <li><a href="#" data-scroll-nav="5">Bilder</a></li>
 		        <li><a href="#" data-scroll-nav="6">Priser</a></li>
 		        <li><a href="#" data-scroll-nav="7">Kontakt oss</a></li>
-		      </ul>
+				<!--<li><a href="/index2.html">Nyhet: EVA</a></li>-->
+
+			  </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container -->
 		</nav>
@@ -99,7 +101,7 @@
 		<section id="home" class="header" data-scroll-index="0" data-stellar-background-ratio="0.8">
 			<div class="container">
 				<div class="row">
-					<div class="v-middle">
+					<div class="v-bottom">
 						<div class="caption">
 							<h4>Velkommen til</h4>
 							<h1>Adamsakt</h1>
@@ -110,8 +112,25 @@
 					</div>
 				</div>
 			</div>
+
+		<!-- ====== End Header ====== NOT -->
+
+		<!-- ====== NEW: EVA ======  -->
+
+			<div class="container">
+				<div class="row">
+					<div class="v-middle">
+						<div class="caption2">
+							<h4>NYHET</h4>
+							<a href="index2.html"><h1>EVA</h1></a>
+							<h4>Bestill en time med Eva som aktmodell allerede nå</h4>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
-		<!-- ====== End Header ======  -->
+
+		<!-- ====== End Header ====== -->
 
 		<!-- ====== Hero ======  -->
 		<section id="about" class="hero section-padding" data-scroll-index="1">
